return comment status switcher
