# HW9/blog-RoR-api/config/routes.rb
@@ -18,6 +18,7 @@ Rails.application.routes.draw do
           get :published
           get :unpublished
         end
+        patch :switch, to: 'comments#switch_status', on: :member
       end
 
       resources :tags
